--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-# IRIS Database set up
-quarkus.datasource.db-kind=other 
-quarkus.datasource.username=_system
-quarkus.datasource.password=MyTest2021
-quarkus.datasource.reactive.url=jdbc:IRIS://localhost:1972/USER
+quarkus.datasource.db-kind=other
+# Use the version below when running docker-compose
+quarkus.datasource.jdbc.url=jdbc:IRIS://localhost:1972/USER
+%prod.quarkus.datasource.jdbc.url=jdbc:IRIS://iris:1972/USER
 quarkus.datasource.jdbc.driver=com.intersystems.jdbc.IRISDriver
+quarkus.datasource.username=SuperUser
+quarkus.datasource.password=SYS
+
+quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.dialect=org.hibernate.dialect.InterSystemsIRISDialect
-#quarkus.hibernate-orm.database.generation=drop-and-create
-
-
