application.properties update and also the service and controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,12 @@ quarkus.datasource.db-kind=other
 quarkus.datasource.jdbc.url=jdbc:IRIS://localhost:1972/USER
 %prod.quarkus.datasource.jdbc.url=jdbc:IRIS://iris:1972/USER
 quarkus.datasource.jdbc.driver=com.intersystems.jdbc.IRISDriver
-quarkus.datasource.username=SuperUser
-quarkus.datasource.password=SYS
+quarkus.datasource.username=_system
+quarkus.datasource.password=MyTest2021
 
-quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.dialect=org.hibernate.dialect.InterSystemsIRISDialect
+
+
+
