--- a/pom.xml
+++ b/pom.xml
@@ -39,17 +39,20 @@
 		</dependency>
 		<dependency>
 			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-resteasy-jackson</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-resteasy-jsonb</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.quarkus</groupId>
 			<artifactId>quarkus-smallrye-openapi</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>io.quarkus</groupId>
 			<artifactId>quarkus-hibernate-orm-panache</artifactId>
 		</dependency>
-		<dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-hibernate-orm</artifactId>
-        </dependency>
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -58,12 +61,12 @@
 		</dependency>
 		<!-- intersystems iris dependency for hibernate -->
 		<dependency>
-            <groupId>intersystems</groupId>
-            <artifactId>jdbc</artifactId>
-            <version>3.3.0</version>
-            <scope>system</scope>
-            <systemPath>${pom.basedir}/src/main/resources/intersystems-jdbc-3.3.0.jar</systemPath>
-        </dependency>
+			<groupId>intersystems</groupId>
+			<artifactId>jdbc</artifactId>
+			<version>3.3.0</version>
+			<scope>system</scope>
+			<systemPath>${pom.basedir}/src/main/resources/intersystems-jdbc-3.3.0.jar</systemPath>
+		</dependency>
 		<!-- ends interystems iris dependency for hibernte -->
 		<dependency>
 			<groupId>io.quarkus</groupId>
@@ -97,6 +100,10 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${compiler-plugin.version}</version>
 				<configuration>
+					<source>11</source>
+					<target>11</target>
+					<!-- the parameters=true option is critical so that RESTEasy works fine -->
+					<parameters>true</parameters>
 					<compilerArgs>
 						<arg>-parameters</arg>
 					</compilerArgs>
